<resources>
    <string name="app_name">ObviousGalleryApp</string>
    <string name="error_image_list">Sorry, Images not available, Pls try later</string>
    <string name="my_collections">My Collections</string>
    <string name="lbl_show_photo_details"><u>Show Photo Details</u></string>
    <string name="lbl_photo_details">Photo Details</string>
    <string name="lbl_date_colon">Date: </string>
    <string name="lbl_details_colon">Details: </string>
    <string name="lbl_copyright_colon">Copyright: </string>
    <string name="lbl_title_colon">Title: </string>
    <string name="lbl_no_internet"><b>Oops! No Internet</b>,\nPlease check your connection</string>
    <string name="lbl_retry">Retry</string>
</resources>